--- a/package.json
+++ b/package.json
@@ -20,14 +20,21 @@
         "@types/node": "^24.3.0",
         "ahooks": "^3.9.4",
         "axios": "^1.11.0",
+        "class-variance-authority": "^0.7.1",
+        "classnames": "^2.5.1",
         "core-js": "^3.45.1",
+        "framer-motion": "^12.23.12",
         "jotai": "^2.13.1",
+        "jotai-tanstack-query": "^0.11.0",
         "lodash": "^4.17.21",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-infinite-scroll-component": "^6.1.0",
+        "react-intersection-observer": "^9.16.0",
         "react-router": "^7.8.2",
         "regenerator-runtime": "^0.14.1",
         "vite-plugin-externals": "^0.6.2",
+        "vite-plugin-html": "^3.2.2",
         "vite-plugin-svgr": "^4.5.0"
     },
     "devDependencies": {
