--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
         "@babel/runtime": "^7.28.3",
+        "@motionone/utils": "^10.18.0",
         "@tailwindcss/postcss": "^4.1.12",
         "@tanstack/react-query": "^5.85.5",
         "@types/node": "^24.3.0",
